[project]
name = "dbw_crew"
version = "0.1.0"
description = "dbw_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
dbw_crew = "dbw_crew.main:run"
run_crew = "dbw_crew.main:run"
train = "dbw_crew.main:train"
replay = "dbw_crew.main:replay"
test = "dbw_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
